<resources>
    <string name="app_name" translatable="false">T-Dolls DB</string>
    <string name="load_loading">Loading…</string>
    <string name="load_dl">Downloading T-Doll list…</string>
    <string name="load_writing">Writing to cache…</string>
    <string name="main_library">Library</string>
    <string name="load_parsing">Parsing…</string>
    <string name="load_error">An error occurred while parsing one of t-dolls.</string>
    <string name="load_preparing">Preparing…</string>
    <string name="load_gplist">Gamepress T-Doll list</string>
    <string name="load_fwslist">GF.FWS.TW T-Doll list</string>
    <string name="load_gpstat">Gamepress T-Doll stats</string>
    <string name="load_fwsstat">GF.FWS.TW T-Doll stats</string>
    <string name="card_info">Information</string>
    <string name="card_cgs">CGs</string>
    <string name="card_menu_link">Links</string>
    <string name="card_pattern">Buff Pattern</string>
    <string name="load_stat">Stat values</string>
    <string name="card_parserr">Some elements has not parsed</string>
    <string name="card_parserr_details">Details…</string>
    <string name="card_parserr_details_title">Parser errors</string>
    <string name="main_menu_reload">Reload DB</string>
    <string name="main_menu_settings">Settings</string>
    <string name="card_cg_main">Default</string>
    <string name="lib_menu_search">Search</string>
    <string name="lib_menu_sort">Sort</string>
    <string name="lib_menu_sort_reverse">Reverse</string>
    <string name="main_cg" translatable="false">main cg</string>
    <string name="card_maxhp" translatable="false">Max.HP</string>
    <string name="card_maxdmg" translatable="false">Max.DMG</string>
    <string name="card_maxacc" translatable="false">Max.ACC</string>
    <string name="card_maxeva" translatable="false">Max.EVA</string>
    <string name="card_maxrof" translatable="false">Max.ROF</string>
    <string name="card_skills">Skills</string>
    <string name="lib_menu_filter">Filter</string>
    <string name="lib_menu_fbt">Find by Time…</string>
    <string name="lib_nores">No results for such query</string>
    <string name="time_title">Find by crafting time</string>
    <string name="time_set">Set</string>
    <string name="lib_menu_reset_filters">Reset Filters</string>
    <string name="card_downloading">Downloading data…</string>
    <string name="load_fatal_err">A critical error occurred. If app is not working, please, report it to developer.</string>
    <string name="load_selectserv">Select game server</string>
    <string name="prefs_server">Game Server</string>
    <string name="card_affects" translatable="false">Affects</string>
    <string name="load_reload">Reloading database due to app update or experimental version</string>
    <string name="load_clearCache">Would you like to clear cache?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="main_prefsChangedReloading">Game server changed, reloading database</string>
    <string name="prefs_title">Preferences</string>
    <string name="load_cleardata">Clear all data</string>
    <string name="load_selectedserver">Server: %s</string>
    <string name="main_craft">Craft Calculator</string>
    <string name="load_wiki">Wiki dolls index</string>
    <string name="load_craftwiki">Wiki craft index</string>
    <string name="craft_chances">Chances to produce at least one:</string>
    <string name="craft_constype_normal">Normal Construction</string>
    <string name="craft_constype_large1">Heavy Low Tier</string>
    <string name="craft_constype_large2">Heavy Medium Tier</string>
    <string name="craft_constype_large3">Heavy High Tier</string>
    <string name="craft_tries">Tries</string>
    <string name="cacheloadfail">Database was not loaded. If error repeats, try to reinstall app</string>
    <string name="dberr">Error on loading database. Try to reinstall app</string>
    <string name="craft_craftable">Can produce:</string>
    <string name="craft_libtitle_droplist">Droplist</string>
    <string name="craft_libtitle_select">Select target</string>
    <string name="lib_tocraft_title">Select preferred craft type</string>
    <string name="load_change">Change</string>
    <string name="load_dontreload">Don\'t reload</string>
    <string name="card_menu_craft">To CraftCalc</string>
    <string name="craft_select">Select doll</string>
    <string name="nowiki">Wiki entry not found. MOD3 supporting will be when this function is implemented on EN server</string>
    <string name="craft_remove">Remove</string>

    <array name="card_links_en">
        <item>English version (gamepress.gg)</item>
        <item>Taiwan version (gf.fws.tw)</item>
        <item>Wiki</item>
    </array>
    <array name="lib_sort_arr">
        <item>No.</item>
        <item>Name</item>
        <item>Rarity</item>
        <item>Prod. time</item>
        <item>Type</item>
        <item>HP</item>
        <item>DMG</item>
        <item>ACC</item>
        <item>EVA</item>
        <item>ROF</item>
    </array>

    <array name="servers">
        <item>English (Sunborn)</item>
        <item>Taiwan (Similar to CN)</item>
    </array>
    <array name="servers_values">
        <item>EN</item>
        <item>TW</item>
    </array>
    <array name="lib_tocraft_options">
        <item>Minimum cost recipe</item>
        <item>Recommend for that type</item>
    </array>

</resources>
